--- a/.classpath
+++ b/.classpath
@@ -23,11 +23,11 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/win7/Desktop/GrapeFW/Test_2017-10-27/sdk/t11.103.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/软件/常用软件/安装包/t12.jar" sourcepath="D:/软件/常用软件/安装包/JGrapeFW-master"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
